<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".ui.dashboard.DetailFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textColor="@color/primaryText"
                android:textSize="18sp"
                android:text="@string/detail"
                android:layout_height="match_parent"
                android:gravity="center" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:text="@string/user_id"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/primaryText"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:id="@+id/userId"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/divider"
            android:layout_height="0.5dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:text="@string/user_name"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/primaryText"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:id="@+id/userName"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:background="@color/divider"
            android:layout_height="0.5dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:text="@string/email"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/primaryText"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:id="@+id/userMail"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:background="@color/divider"
            android:layout_height="0.5dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:text="@string/gender"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/primaryText"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:id="@+id/gender"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:background="@color/divider"
            android:layout_height="0.5dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:text="@string/status"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/primaryText"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:id="@+id/status"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:background="@color/divider"
            android:layout_height="0.5dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:text="@string/comments"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/primaryText"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:id="@+id/comments"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:background="@color/divider"
            android:layout_height="0.5dp"/>
    </LinearLayout>
</layout>